Use NCBI secret in CI, cause VCR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,5 @@ jobs:
         bundler-cache: true
     - name: Run the default task
       run: bundle exec rake
+      env:
+        credentials: ${{ secrets.NCBI_API_KEY }}
