Fix workflow env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Run the default task
       run: bundle exec rake
       env:
-        credentials: ${{ secrets.NCBI_API_KEY }}
+        NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
